Moooore cleanup on onebox embeds

--- a/app/assets/stylesheets/partials/status-panel.css.scss
+++ b/app/assets/stylesheets/partials/status-panel.css.scss
@@ -530,6 +530,7 @@
     display: inline-block;
     background: #ddd;
     border-bottom-right-radius: 3px;
+    border-top-left-radius: 3px;
     padding: 5px 10px;
     position: absolute;
     top: 0;
