dont show null on about

--- a/app/frontend/app/templates/group/index.hbs
+++ b/app/frontend/app/templates/group/index.hbs
@@ -25,7 +25,11 @@
             </div>
             {{textarea class="edit-bio" rows="3" placeholder="Tell us about your group." value=group.truncatedAbout}}
           {{else}}
-            <p class="about">{{{group.aboutDisplay}}}</p>
+            <p class="about">
+              {{#if group.aboutDisplay}}
+                {{{group.aboutDisplay}}}
+              {{/if}}
+            </p>
           {{/if}}
         </div>
       </div>
