Fix comment and about section embeds for images and giphycat

--- a/app/assets/stylesheets/base/layout.css.scss
+++ b/app/assets/stylesheets/base/layout.css.scss
@@ -27,6 +27,10 @@ html { overflow-y: auto; }
   &:hover { i { color: white; }}
 }
 
+img, iframe {
+  max-width: 100%;
+}
+
 
 .navbar-brand {
   background-image: url("/assets/logo-sprite.png");
