[:beetle:] Fix cover image uploads, remove ridiculous production check

--- a/app/assets/stylesheets/base/hacks.css.scss
+++ b/app/assets/stylesheets/base/hacks.css.scss
@@ -210,6 +210,11 @@ a.navbar-brand {
 /* JCrop Stuff */
 .jcrop {
   text-align: center;
+
+  img {
+    max-width: none;
+  }
+
   .jcrop-holder {
     display: inline-block;
   }
