--- a/frontend/app/templates/index.hbs
+++ b/frontend/app/templates/index.hbs
@@ -1,1 +1,366 @@
-<h1>I'm apparently a landing page</h1>
+<style>
+  body { margin-top: 0;}
+  .hb-nav, .signup-cta { display: none;}
+</style>
+
+<div class="guest-landing">
+
+  <nav class="navbar navbar-default fade navbar-fixed-top in navbar-inverse" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="https://hummingbird.me"><span class="logo"></span></a>
+      </div>
+      <div class="navbar-collapse" id="navbar-collapse" role="navigation" aria-expanded="false">
+        <ul class="nav navbar-nav">
+          <li class="hidden-sm hidden-xs"><a class="how" href="https://hummingbird.me/anime">Browse Anime</a></li>
+          <li class="hidden-sm hidden-xs"><a class="use" href="https://hummingbird.me/manga">Browse Manga</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a class="btn btn-register" href="#" id="countdown" rel="nofollow" role="menuitem" tabindex="-1">Login</a></li>
+          <li><a class="btn btn-register" href="#" rel="nofollow" role="menuitem" tabindex="-1">Register</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <div class="hero-section">
+    <div class="no-hero-vid"></div>
+    <div class="hero-media">
+      <video preload="" webkit-playsinline="webkit-playsinline" autoplay="autoplay" loop="" class="video-background" poster="/preload.jpg">
+        <source src="/hero-vid.mp4" type="video/mp4">
+        <source src="/hero-vid.webm" type="video/webm">
+      </video>
+    </div>
+    <div class="hero-overlay"></div>
+    <div class="introduction vertical-align text-center fade in" style="margin-top: -97.5px;">
+      <div class="hero-wordmark"><img src="/hero-wordmark.png"></div>
+      <p>Share anime and manga experiences, get recommendations and see what friends are watching or reading.</p>
+      <a class="hero-facebook" href="#">
+        <i class="fa fa-facebook-square"></i>
+        Login with Facebook
+      </a>
+      <p class="hero-email">or <a href="#">register with your email</a></p>
+    </div>
+    <div class="learn-more">
+      <img alt="Learn more" class="image-svg arrow-down" src="/arrow-down.svg">
+    </div>
+  </div>
+
+  <div class="about-section landing-section">
+    <div class="container">
+      <div class="copy-wrapper">
+        <h1>Hummingbird is kawaii, baka gaijin.</h1>
+        <p class="subtitle">Our obnoxious use of worn out japanese phrases lets you know we’re the real deal.</p>
+        <p class="section-description">Your personal activity feed allows you to share your experiences, news, videos, images and music with other anime and manga fans that are following you.</p>
+        <div class="screenshot-wrapper">
+          <img src="/about-section.jpg">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="posts-section landing-section">
+    <div class="container">
+      <h2> Recent Posts on Hummingbird</h2>
+      <div class="recent-stories">
+
+        <!-- Most recent 6 stories go here -->
+        <div class="recent-story"> <!-- Each should be wrapped in this tag -->
+          <div class="ember-view story" id="ember2362">
+            <div class="update-panel" data-bindattr-2455="2455">
+              <div class="row">
+                <div class="user-info-bar">
+                  <div class="user-image">
+                    <a class="ember-view" href="/users/PeterTechGuy" id=
+                    "ember2456"><img alt="PeterTechGuy" class="responsive-image" src=
+                    "https://static.hummingbird.me/users/avatars/000/028/839/thumb_small/aisaka_taiga_toradora_simple_background_palmtop_tiger_desktop_1920x1200_hd-wallpaper-1160710_(2).jpg?1424013932"></a>
+                  </div>
+
+                  <div class="comment-content">
+                    <h4 class="story-title"><a class="ember-view" href=
+                    "/users/PeterTechGuy" id="ember2457">PeterTechGuy</a></h4>
+
+                    <p class="secondary"><span class="ember-view" id="ember2458">8
+                    minutes ago</span> · <a class="ember-view permalink" href=
+                    "/stories/4842747" id="ember2459">permalink</a> · <a class=
+                    "remove-post" data-ember-action="2465">remove</a></p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="post-content clearfix">
+                  <p class="comment-text" data-bindattr-2466="2466">This is a test post.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="story-actions">
+              <a class="like" data-bindattr-2460="2460" data-ember-action=
+              "2461"><i class="fa fa-heart-o"></i> 0</a>
+
+              <ul class="active-users"></ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="recent-story"> <!-- Each should be wrapped in this tag -->
+          <div class="ember-view story" id="ember2362">
+            <div class="update-panel" data-bindattr-2455="2455">
+              <div class="row">
+                <div class="user-info-bar">
+                  <div class="user-image">
+                    <a class="ember-view" href="/users/PeterTechGuy" id=
+                    "ember2456"><img alt="PeterTechGuy" class="responsive-image" src=
+                    "https://static.hummingbird.me/users/avatars/000/028/839/thumb_small/aisaka_taiga_toradora_simple_background_palmtop_tiger_desktop_1920x1200_hd-wallpaper-1160710_(2).jpg?1424013932"></a>
+                  </div>
+
+                  <div class="comment-content">
+                    <h4 class="story-title"><a class="ember-view" href=
+                    "/users/PeterTechGuy" id="ember2457">PeterTechGuy</a></h4>
+
+                    <p class="secondary"><span class="ember-view" id="ember2458">8
+                    minutes ago</span> · <a class="ember-view permalink" href=
+                    "/stories/4842747" id="ember2459">permalink</a> · <a class=
+                    "remove-post" data-ember-action="2465">remove</a></p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="post-content clearfix">
+                  <p class="comment-text" data-bindattr-2466="2466">This is a test post. This is a test post. This is a test post. This is a test post.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="story-actions">
+              <a class="like" data-bindattr-2460="2460" data-ember-action=
+              "2461"><i class="fa fa-heart-o"></i> 0</a>
+
+              <ul class="active-users"></ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="recent-story"> <!-- Each should be wrapped in this tag -->
+          <div class="ember-view story" id="ember2362">
+            <div class="update-panel" data-bindattr-2455="2455">
+              <div class="row">
+                <div class="user-info-bar">
+                  <div class="user-image">
+                    <a class="ember-view" href="/users/PeterTechGuy" id=
+                    "ember2456"><img alt="PeterTechGuy" class="responsive-image" src=
+                    "https://static.hummingbird.me/users/avatars/000/028/839/thumb_small/aisaka_taiga_toradora_simple_background_palmtop_tiger_desktop_1920x1200_hd-wallpaper-1160710_(2).jpg?1424013932"></a>
+                  </div>
+
+                  <div class="comment-content">
+                    <h4 class="story-title"><a class="ember-view" href=
+                    "/users/PeterTechGuy" id="ember2457">PeterTechGuy</a></h4>
+
+                    <p class="secondary"><span class="ember-view" id="ember2458">8
+                    minutes ago</span> · <a class="ember-view permalink" href=
+                    "/stories/4842747" id="ember2459">permalink</a> · <a class=
+                    "remove-post" data-ember-action="2465">remove</a></p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="post-content clearfix">
+                  <p class="comment-text" data-bindattr-2466="2466">This is a test post. This is a test post. This is a test post. This is a test post.This is a test post. This is a test post. This is a test post. This is a test post.This is a test post. This is a test post. This is a test post. This is a test post.This is a test post. This is a test post. This is a test post. This is a test post.This is a test post. This is a test post. This is a test post. This is a test post.This is a test post. This is a test post. This is a test post. This is a test post.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="story-actions">
+              <a class="like" data-bindattr-2460="2460" data-ember-action=
+              "2461"><i class="fa fa-heart-o"></i> 0</a>
+
+              <ul class="active-users"></ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="recent-story"> <!-- Each should be wrapped in this tag -->
+          <div class="ember-view story" id="ember2362">
+            <div class="update-panel" data-bindattr-2455="2455">
+              <div class="row">
+                <div class="user-info-bar">
+                  <div class="user-image">
+                    <a class="ember-view" href="/users/PeterTechGuy" id=
+                    "ember2456"><img alt="PeterTechGuy" class="responsive-image" src=
+                    "https://static.hummingbird.me/users/avatars/000/028/839/thumb_small/aisaka_taiga_toradora_simple_background_palmtop_tiger_desktop_1920x1200_hd-wallpaper-1160710_(2).jpg?1424013932"></a>
+                  </div>
+
+                  <div class="comment-content">
+                    <h4 class="story-title"><a class="ember-view" href=
+                    "/users/PeterTechGuy" id="ember2457">PeterTechGuy</a></h4>
+
+                    <p class="secondary"><span class="ember-view" id="ember2458">8
+                    minutes ago</span> · <a class="ember-view permalink" href=
+                    "/stories/4842747" id="ember2459">permalink</a> · <a class=
+                    "remove-post" data-ember-action="2465">remove</a></p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="post-content clearfix">
+                  <p class="comment-text" data-bindattr-2466="2466">This is a test post. This is a test post. This is a test post. This is a test post.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="story-actions">
+              <a class="like" data-bindattr-2460="2460" data-ember-action=
+              "2461"><i class="fa fa-heart-o"></i> 0</a>
+
+              <ul class="active-users"></ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="recent-story"> <!-- Each should be wrapped in this tag -->
+          <div class="ember-view story" id="ember2362">
+            <div class="update-panel" data-bindattr-2455="2455">
+              <div class="row">
+                <div class="user-info-bar">
+                  <div class="user-image">
+                    <a class="ember-view" href="/users/PeterTechGuy" id=
+                    "ember2456"><img alt="PeterTechGuy" class="responsive-image" src=
+                    "https://static.hummingbird.me/users/avatars/000/028/839/thumb_small/aisaka_taiga_toradora_simple_background_palmtop_tiger_desktop_1920x1200_hd-wallpaper-1160710_(2).jpg?1424013932"></a>
+                  </div>
+
+                  <div class="comment-content">
+                    <h4 class="story-title"><a class="ember-view" href=
+                    "/users/PeterTechGuy" id="ember2457">PeterTechGuy</a></h4>
+
+                    <p class="secondary"><span class="ember-view" id="ember2458">8
+                    minutes ago</span> · <a class="ember-view permalink" href=
+                    "/stories/4842747" id="ember2459">permalink</a> · <a class=
+                    "remove-post" data-ember-action="2465">remove</a></p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="post-content clearfix">
+                  <p class="comment-text" data-bindattr-2466="2466">This is a test post. This is a test post. This is a test post. This is a test post.This is a test post. This is a test post. This is a test post. This is a test post.This is a test post. This is a test post. This is a test post. This is a test post.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="story-actions">
+              <a class="like" data-bindattr-2460="2460" data-ember-action=
+              "2461"><i class="fa fa-heart-o"></i> 0</a>
+
+              <ul class="active-users"></ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="recent-story"> <!-- Each should be wrapped in this tag -->
+          <div class="ember-view story" id="ember2362">
+            <div class="update-panel" data-bindattr-2455="2455">
+              <div class="row">
+                <div class="user-info-bar">
+                  <div class="user-image">
+                    <a class="ember-view" href="/users/PeterTechGuy" id=
+                    "ember2456"><img alt="PeterTechGuy" class="responsive-image" src=
+                    "https://static.hummingbird.me/users/avatars/000/028/839/thumb_small/aisaka_taiga_toradora_simple_background_palmtop_tiger_desktop_1920x1200_hd-wallpaper-1160710_(2).jpg?1424013932"></a>
+                  </div>
+
+                  <div class="comment-content">
+                    <h4 class="story-title"><a class="ember-view" href=
+                    "/users/PeterTechGuy" id="ember2457">PeterTechGuy</a></h4>
+
+                    <p class="secondary"><span class="ember-view" id="ember2458">8
+                    minutes ago</span> · <a class="ember-view permalink" href=
+                    "/stories/4842747" id="ember2459">permalink</a> · <a class=
+                    "remove-post" data-ember-action="2465">remove</a></p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="post-content clearfix">
+                  <p class="comment-text" data-bindattr-2466="2466">This is a test post. This is a test post. This is a test post. This is a test post.This is a test post. This is a test post. This is a test post. This is a test post.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="story-actions">
+              <a class="like" data-bindattr-2460="2460" data-ember-action=
+              "2461"><i class="fa fa-heart-o"></i> 0</a>
+
+              <ul class="active-users"></ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="recent-story"> <!-- Each should be wrapped in this tag -->
+          <div class="ember-view story" id="ember2362">
+            <div class="update-panel" data-bindattr-2455="2455">
+              <div class="row">
+                <div class="user-info-bar">
+                  <div class="user-image">
+                    <a class="ember-view" href="/users/PeterTechGuy" id=
+                    "ember2456"><img alt="PeterTechGuy" class="responsive-image" src=
+                    "https://static.hummingbird.me/users/avatars/000/028/839/thumb_small/aisaka_taiga_toradora_simple_background_palmtop_tiger_desktop_1920x1200_hd-wallpaper-1160710_(2).jpg?1424013932"></a>
+                  </div>
+
+                  <div class="comment-content">
+                    <h4 class="story-title"><a class="ember-view" href=
+                    "/users/PeterTechGuy" id="ember2457">PeterTechGuy</a></h4>
+
+                    <p class="secondary"><span class="ember-view" id="ember2458">8
+                    minutes ago</span> · <a class="ember-view permalink" href=
+                    "/stories/4842747" id="ember2459">permalink</a> · <a class=
+                    "remove-post" data-ember-action="2465">remove</a></p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="post-content clearfix">
+                  <p class="comment-text" data-bindattr-2466="2466">This is a test post. This is a test post. This is a test post. This is a test post.This is a test post. This is a test post. This is a test post. This is a test post.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="story-actions">
+              <a class="like" data-bindattr-2460="2460" data-ember-action=
+              "2461"><i class="fa fa-heart-o"></i> 0</a>
+
+              <ul class="active-users"></ul>
+            </div>
+          </div>
+        </div>
+        <!-- End recent stories -->
+      </div>
+    </div>
+  </div>
+  <div class="about-section landing-section">
+    <div class="container">
+      <div class="copy-wrapper">
+        <h1>Find your favorites, build your collection.</h1>
+        <p class="subtitle">Your favorite anime is shit, but we won’t hold that against you.</p>
+        <p class="section-description">Keep track of what you’ve seen, read, and look forward to. <br> We’ll even tell you how much of your life you’ve spent watching anime.</p>
+        <div class="screenshot-wrapper">
+          <img src="/library-section.jpg">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer-section landing-section">
+    <div class="container">
+      <div class="copy-wrapper">
+        <h1>Ready to get started?</h1>
+        <p class="subtitle">We're glad you've finally noticed us, senpai ...uguu.</p>
+        <a class="footer-email" href="#">Register with Email</a>
+        <a class="footer-facebook" href="#">Login with Facebook</a>
+      </div>
+    </div>
+  </div>
+</div>
