handle header scrolling

--- a/frontend/app/templates/index.hbs
+++ b/frontend/app/templates/index.hbs
@@ -3,7 +3,7 @@
   .hb-nav, .signup-cta { display: none;}
 </style>
 
-<div class="guest-landing">
+<div {{bind-attr class=":guest-landing isScrolling:is-scrolled"}}>
 
   <nav class="navbar navbar-default fade navbar-fixed-top in navbar-inverse" role="navigation">
     <div class="container">
