--- a/frontend/app/templates/index.hbs
+++ b/frontend/app/templates/index.hbs
@@ -73,281 +73,11 @@
     <div class="container">
       <h2> Recent Posts on Hummingbird</h2>
       <div class="recent-stories">
-
-        <!-- Most recent 6 stories go here -->
-        <div class="recent-story"> <!-- Each should be wrapped in this tag -->
-          <div class="ember-view story" id="ember2362">
-            <div class="update-panel" data-bindattr-2455="2455">
-              <div class="row">
-                <div class="user-info-bar">
-                  <div class="user-image">
-                    <a class="ember-view" href="/users/PeterTechGuy" id=
-                    "ember2456"><img alt="PeterTechGuy" class="responsive-image" src=
-                    "https://static.hummingbird.me/users/avatars/000/028/839/thumb_small/aisaka_taiga_toradora_simple_background_palmtop_tiger_desktop_1920x1200_hd-wallpaper-1160710_(2).jpg?1424013932"></a>
-                  </div>
-
-                  <div class="comment-content">
-                    <h4 class="story-title"><a class="ember-view" href=
-                    "/users/PeterTechGuy" id="ember2457">PeterTechGuy</a></h4>
-
-                    <p class="secondary"><span class="ember-view" id="ember2458">8
-                    minutes ago</span> · <a class="ember-view permalink" href=
-                    "/stories/4842747" id="ember2459">permalink</a> · <a class=
-                    "remove-post" data-ember-action="2465">remove</a></p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="post-content clearfix">
-                  <p class="comment-text" data-bindattr-2466="2466">This is a test post.</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="story-actions">
-              <a class="like" data-bindattr-2460="2460" data-ember-action=
-              "2461"><i class="fa fa-heart-o"></i> 0</a>
-
-              <ul class="active-users"></ul>
-            </div>
+        {{#each model itemController="story"}}
+          <div class="recent-story">
+            {{view "story" content=this}}
           </div>
-        </div>
-
-        <div class="recent-story"> <!-- Each should be wrapped in this tag -->
-          <div class="ember-view story" id="ember2362">
-            <div class="update-panel" data-bindattr-2455="2455">
-              <div class="row">
-                <div class="user-info-bar">
-                  <div class="user-image">
-                    <a class="ember-view" href="/users/PeterTechGuy" id=
-                    "ember2456"><img alt="PeterTechGuy" class="responsive-image" src=
-                    "https://static.hummingbird.me/users/avatars/000/028/839/thumb_small/aisaka_taiga_toradora_simple_background_palmtop_tiger_desktop_1920x1200_hd-wallpaper-1160710_(2).jpg?1424013932"></a>
-                  </div>
-
-                  <div class="comment-content">
-                    <h4 class="story-title"><a class="ember-view" href=
-                    "/users/PeterTechGuy" id="ember2457">PeterTechGuy</a></h4>
-
-                    <p class="secondary"><span class="ember-view" id="ember2458">8
-                    minutes ago</span> · <a class="ember-view permalink" href=
-                    "/stories/4842747" id="ember2459">permalink</a> · <a class=
-                    "remove-post" data-ember-action="2465">remove</a></p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="post-content clearfix">
-                  <p class="comment-text" data-bindattr-2466="2466">This is a test post. This is a test post. This is a test post. This is a test post.</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="story-actions">
-              <a class="like" data-bindattr-2460="2460" data-ember-action=
-              "2461"><i class="fa fa-heart-o"></i> 0</a>
-
-              <ul class="active-users"></ul>
-            </div>
-          </div>
-        </div>
-
-        <div class="recent-story"> <!-- Each should be wrapped in this tag -->
-          <div class="ember-view story" id="ember2362">
-            <div class="update-panel" data-bindattr-2455="2455">
-              <div class="row">
-                <div class="user-info-bar">
-                  <div class="user-image">
-                    <a class="ember-view" href="/users/PeterTechGuy" id=
-                    "ember2456"><img alt="PeterTechGuy" class="responsive-image" src=
-                    "https://static.hummingbird.me/users/avatars/000/028/839/thumb_small/aisaka_taiga_toradora_simple_background_palmtop_tiger_desktop_1920x1200_hd-wallpaper-1160710_(2).jpg?1424013932"></a>
-                  </div>
-
-                  <div class="comment-content">
-                    <h4 class="story-title"><a class="ember-view" href=
-                    "/users/PeterTechGuy" id="ember2457">PeterTechGuy</a></h4>
-
-                    <p class="secondary"><span class="ember-view" id="ember2458">8
-                    minutes ago</span> · <a class="ember-view permalink" href=
-                    "/stories/4842747" id="ember2459">permalink</a> · <a class=
-                    "remove-post" data-ember-action="2465">remove</a></p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="post-content clearfix">
-                  <p class="comment-text" data-bindattr-2466="2466">This is a test post. This is a test post. This is a test post. This is a test post.This is a test post. This is a test post. This is a test post. This is a test post.This is a test post. This is a test post. This is a test post. This is a test post.This is a test post. This is a test post. This is a test post. This is a test post.This is a test post. This is a test post. This is a test post. This is a test post.This is a test post. This is a test post. This is a test post. This is a test post.</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="story-actions">
-              <a class="like" data-bindattr-2460="2460" data-ember-action=
-              "2461"><i class="fa fa-heart-o"></i> 0</a>
-
-              <ul class="active-users"></ul>
-            </div>
-          </div>
-        </div>
-
-        <div class="recent-story"> <!-- Each should be wrapped in this tag -->
-          <div class="ember-view story" id="ember2362">
-            <div class="update-panel" data-bindattr-2455="2455">
-              <div class="row">
-                <div class="user-info-bar">
-                  <div class="user-image">
-                    <a class="ember-view" href="/users/PeterTechGuy" id=
-                    "ember2456"><img alt="PeterTechGuy" class="responsive-image" src=
-                    "https://static.hummingbird.me/users/avatars/000/028/839/thumb_small/aisaka_taiga_toradora_simple_background_palmtop_tiger_desktop_1920x1200_hd-wallpaper-1160710_(2).jpg?1424013932"></a>
-                  </div>
-
-                  <div class="comment-content">
-                    <h4 class="story-title"><a class="ember-view" href=
-                    "/users/PeterTechGuy" id="ember2457">PeterTechGuy</a></h4>
-
-                    <p class="secondary"><span class="ember-view" id="ember2458">8
-                    minutes ago</span> · <a class="ember-view permalink" href=
-                    "/stories/4842747" id="ember2459">permalink</a> · <a class=
-                    "remove-post" data-ember-action="2465">remove</a></p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="post-content clearfix">
-                  <p class="comment-text" data-bindattr-2466="2466">This is a test post. This is a test post. This is a test post. This is a test post.</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="story-actions">
-              <a class="like" data-bindattr-2460="2460" data-ember-action=
-              "2461"><i class="fa fa-heart-o"></i> 0</a>
-
-              <ul class="active-users"></ul>
-            </div>
-          </div>
-        </div>
-
-        <div class="recent-story"> <!-- Each should be wrapped in this tag -->
-          <div class="ember-view story" id="ember2362">
-            <div class="update-panel" data-bindattr-2455="2455">
-              <div class="row">
-                <div class="user-info-bar">
-                  <div class="user-image">
-                    <a class="ember-view" href="/users/PeterTechGuy" id=
-                    "ember2456"><img alt="PeterTechGuy" class="responsive-image" src=
-                    "https://static.hummingbird.me/users/avatars/000/028/839/thumb_small/aisaka_taiga_toradora_simple_background_palmtop_tiger_desktop_1920x1200_hd-wallpaper-1160710_(2).jpg?1424013932"></a>
-                  </div>
-
-                  <div class="comment-content">
-                    <h4 class="story-title"><a class="ember-view" href=
-                    "/users/PeterTechGuy" id="ember2457">PeterTechGuy</a></h4>
-
-                    <p class="secondary"><span class="ember-view" id="ember2458">8
-                    minutes ago</span> · <a class="ember-view permalink" href=
-                    "/stories/4842747" id="ember2459">permalink</a> · <a class=
-                    "remove-post" data-ember-action="2465">remove</a></p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="post-content clearfix">
-                  <p class="comment-text" data-bindattr-2466="2466">This is a test post. This is a test post. This is a test post. This is a test post.This is a test post. This is a test post. This is a test post. This is a test post.This is a test post. This is a test post. This is a test post. This is a test post.</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="story-actions">
-              <a class="like" data-bindattr-2460="2460" data-ember-action=
-              "2461"><i class="fa fa-heart-o"></i> 0</a>
-
-              <ul class="active-users"></ul>
-            </div>
-          </div>
-        </div>
-
-        <div class="recent-story"> <!-- Each should be wrapped in this tag -->
-          <div class="ember-view story" id="ember2362">
-            <div class="update-panel" data-bindattr-2455="2455">
-              <div class="row">
-                <div class="user-info-bar">
-                  <div class="user-image">
-                    <a class="ember-view" href="/users/PeterTechGuy" id=
-                    "ember2456"><img alt="PeterTechGuy" class="responsive-image" src=
-                    "https://static.hummingbird.me/users/avatars/000/028/839/thumb_small/aisaka_taiga_toradora_simple_background_palmtop_tiger_desktop_1920x1200_hd-wallpaper-1160710_(2).jpg?1424013932"></a>
-                  </div>
-
-                  <div class="comment-content">
-                    <h4 class="story-title"><a class="ember-view" href=
-                    "/users/PeterTechGuy" id="ember2457">PeterTechGuy</a></h4>
-
-                    <p class="secondary"><span class="ember-view" id="ember2458">8
-                    minutes ago</span> · <a class="ember-view permalink" href=
-                    "/stories/4842747" id="ember2459">permalink</a> · <a class=
-                    "remove-post" data-ember-action="2465">remove</a></p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="post-content clearfix">
-                  <p class="comment-text" data-bindattr-2466="2466">This is a test post. This is a test post. This is a test post. This is a test post.This is a test post. This is a test post. This is a test post. This is a test post.</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="story-actions">
-              <a class="like" data-bindattr-2460="2460" data-ember-action=
-              "2461"><i class="fa fa-heart-o"></i> 0</a>
-
-              <ul class="active-users"></ul>
-            </div>
-          </div>
-        </div>
-
-        <div class="recent-story"> <!-- Each should be wrapped in this tag -->
-          <div class="ember-view story" id="ember2362">
-            <div class="update-panel" data-bindattr-2455="2455">
-              <div class="row">
-                <div class="user-info-bar">
-                  <div class="user-image">
-                    <a class="ember-view" href="/users/PeterTechGuy" id=
-                    "ember2456"><img alt="PeterTechGuy" class="responsive-image" src=
-                    "https://static.hummingbird.me/users/avatars/000/028/839/thumb_small/aisaka_taiga_toradora_simple_background_palmtop_tiger_desktop_1920x1200_hd-wallpaper-1160710_(2).jpg?1424013932"></a>
-                  </div>
-
-                  <div class="comment-content">
-                    <h4 class="story-title"><a class="ember-view" href=
-                    "/users/PeterTechGuy" id="ember2457">PeterTechGuy</a></h4>
-
-                    <p class="secondary"><span class="ember-view" id="ember2458">8
-                    minutes ago</span> · <a class="ember-view permalink" href=
-                    "/stories/4842747" id="ember2459">permalink</a> · <a class=
-                    "remove-post" data-ember-action="2465">remove</a></p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="post-content clearfix">
-                  <p class="comment-text" data-bindattr-2466="2466">This is a test post. This is a test post. This is a test post. This is a test post.This is a test post. This is a test post. This is a test post. This is a test post.</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="story-actions">
-              <a class="like" data-bindattr-2460="2460" data-ember-action=
-              "2461"><i class="fa fa-heart-o"></i> 0</a>
-
-              <ul class="active-users"></ul>
-            </div>
-          </div>
-        </div>
-        <!-- End recent stories -->
+        {{/each}}
       </div>
     </div>
   </div>
