hide comments from landing page

--- a/frontend/app/templates/index.hbs
+++ b/frontend/app/templates/index.hbs
@@ -1,6 +1,6 @@
 <style>
-  body { margin-top: 0;}
-  .hb-nav, .signup-cta { display: none;}
+  body { margin-top: 0; }
+  .hb-nav, .signup-cta, .comment-replies { display: none; }
 </style>
 
 <div {{bind-attr class=":guest-landing isScrolling:is-scrolled"}}>
