--- a/frontend/app/templates/story/comment.hbs
+++ b/frontend/app/templates/story/comment.hbs
@@ -35,6 +35,12 @@
             ·
             <a class="remove-post" {{action "deleteStory"}}>remove</a>
           {{/if}}
+          {{#if currentUser.isAdmin}}
+            ·
+            <a class="remove-post" {{action "toggleNSFW"}}>
+              {{#if adult}}remove{{else}}set{{/if}} nsfw
+            </a>
+          {{/if}}
         </p>
       </div>
     </div>
