Update header and masonry syntax

--- a/frontend/app/templates/index.hbs
+++ b/frontend/app/templates/index.hbs
@@ -13,7 +13,7 @@
       <div class="navbar-collapse" id="navbar-collapse" role="navigation" aria-expanded="false">
         <ul class="nav navbar-nav">
           <li class="hidden-sm hidden-xs"><a class="how" href="https://hummingbird.me/anime">Browse Anime</a></li>
-          <li class="hidden-sm hidden-xs"><a class="use" href="https://hummingbird.me/manga">Browse Manga</a></li>
+          {{!-- <li class="hidden-sm hidden-xs"><a class="use" href="https://hummingbird.me/manga">Browse Manga</a></li> --}}
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li>
