Added googleadservice tracking to landing page

--- a/app/views/layouts/redesign.html.haml
+++ b/app/views/layouts/redesign.html.haml
@@ -3,6 +3,7 @@
   %head(prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# hummingbird: http://ogp.me/ns/fb/hummingbird#")
     %title Hummingbird
 
+    = javascript_include_tag "//www.googleadservices.com/pagead/conversion_async.js"
     = stylesheet_link_tag    "application", :media => "all"
     = csrf_meta_tags
 
