--- a/frontend/app/templates/index.hbs
+++ b/frontend/app/templates/index.hbs
@@ -62,7 +62,7 @@
     <div class="container">
       <div class="copy-wrapper">
         <h1 id="kawaii">Hummingbird is kawaii, baka gaijin.</h1>
-        <p class="subtitle">Our obnoxious use of worn out japanese phrases lets you know we’re the real deal.</p>
+        <p class="subtitle">Our obnoxious use of worn out Japanese phrases lets you know we’re the real deal.</p>
         <p class="section-description">Your personal activity feed allows you to share your experiences, news, videos, images and music with other anime and manga fans that are following you.</p>
         <div class="screenshot-wrapper">
           <img src="/about-section.jpg">
