--- a/app/assets/stylesheets/partials/status-panel.css.scss
+++ b/app/assets/stylesheets/partials/status-panel.css.scss
@@ -454,7 +454,8 @@
       font-size: 14px;
       padding-left: 0;
 
-      img:not(.emoji) {
+      img:not(.emoji),
+      video {
         display: block;
       }
     }
