iframe in comments

--- a/app/assets/stylesheets/partials/status-panel.css.scss
+++ b/app/assets/stylesheets/partials/status-panel.css.scss
@@ -455,7 +455,8 @@
       padding-left: 0;
 
       img:not(.emoji),
-      video {
+      video,
+      iframe {
         display: block;
       }
     }
