:arrow_up: ember deps

--- a/frontend/app/templates/pro.hbs
+++ b/frontend/app/templates/pro.hbs
@@ -194,7 +194,7 @@
                       <div class="offer-clipping">{{code}}</div>
                       <p class="redemption-instructions">{{redemptionInfo}}</p>
                       {{#if recurring}}
-                        <p>You'll be able to redeem another code in {{pluralize daysUntilRedeem "day." "days."}}
+                        <p>You'll be able to redeem another code in {{pluralize daysUntilRedeem "day" "days"}}.</p>
                       {{/if}}
                     {{else}}
                       {{#if hasCodes}}
