Add Fauna rating system font

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,6 +3,9 @@
 @import "bootstrap";
 @import "font-awesome";
 
+// Import fauna
+@import "fauna-font";
+
 // Import Hummingbird core modules
 @import "modules/variables";
 @import "modules/typography";
