Fauna rating frontend stuff

--- a/app/assets/stylesheets/fauna-font.css.scss
+++ b/app/assets/stylesheets/fauna-font.css.scss
@@ -36,6 +36,7 @@
   line-height: 1;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 2em;
 }
 
 .icon-panda:before {
