--- a/frontend/app/templates/settings.hbs
+++ b/frontend/app/templates/settings.hbs
@@ -128,6 +128,10 @@
                 {{radio-button name="rating-system" value="simple" checked=currentUser.ratingType}}
                 {{awesome-rating type="simple"}}
               </label>
+              <label class="radio-inline">
+                {{radio-button name="rating-system" value="fauna" checked=currentUser.ratingType}}
+                {{awesome-rating type="fauna"}}
+              </label>
             </div>
             <div class="form-group">
               <label class="control-label col-sm-4" for="titles">Titles</label>
