--- a/app/assets/stylesheets/partials/fauna-select.css.scss
+++ b/app/assets/stylesheets/partials/fauna-select.css.scss
@@ -1,3 +1,6 @@
+.user-actions .personal-rating {
+  top: 7px;
+}
 .fauna-select {
   position: fixed;
   top: 50px;
@@ -20,12 +23,33 @@
 
 .fauna-select-item {
   width: 320px;
-  height: 80px;
+  padding-top: 30px;
   display: inline-block;
+  border: 1px solid #ddd;
+  margin: 5px;
+  border-radius: 3px;
   list-style-type: none;
-
+  cursor: pointer;
+  background: #F7F7F7;
+  transition: .2s ease-in-out;
+  &:hover {
+    background: #1abc9c;
+    border-color: #1abc9c;
+    color: #0B4C3F;
+    .fauna-name {
+      border-color: lighten(#0B4C3F, 20);
+    }
+  }
   .fauna-icon {
     font-size: 2em;
+  }
+  .fauna-name {
+    display: block;
+    border-top: 1px solid #ddd;
+    margin-top: 20px;
+    padding: 15px 0;
+    font-weight: bold;
+    transition: .2s ease-in-out;
   }
 }
 
