--- a/frontend/app/templates/manga.hbs
+++ b/frontend/app/templates/manga.hbs
@@ -1,107 +1,29 @@
-<div class="manga-page">
-  {{!-- Background Image --}}
-  {{#if coverImage}}
-    <div class="bg-image-wrapper series" {{bind-attr style=coverImageStyle}}></div>
-  {{/if}}
-  <div class="wrapper-fade"></div>
-
-  <div {{bind-attr class=":container coverImage:bg-image:no-bg-image"}}>
-    {{!-- Library Table Row --}}
-    <div class="row">
-      <div class="top-buttons">
-        <ul class="left-buttons">
-          <li>
-            <div class="btn-group">
-              <button {{bind-attr class=":btn :btn-default :dropdown-toggle :top-button libraryStatus:active"}} type="button" data-toggle="dropdown">
-                {{#if mangaLibraryEntryExists}}
-                  {{mangaLibraryEntry.status}}
-                {{else}}
-                  Add to Library
-                {{/if}}
-              </button>
-              <ul class="dropdown-menu">
-                <li><a {{action "setLibraryStatus" "Currently Reading"}}>Currently Reading</a></li>
-                <li><a {{action "setLibraryStatus" "Plan to Read"}}>Plan to Read</a></li>
-                <li><a {{action "setLibraryStatus" "Completed"}}>Completed</a></li>
-                <li><a {{action "setLibraryStatus" "On Hold"}}>On Hold</a></li>
-                <li><a {{action "setLibraryStatus" "Dropped"}}>Dropped</a></li>
-                <li><a {{action "removeFromLibrary"}}>Remove from Library</a></li>
-              </ul>
-            </div>
-          </li>
-          {{#if mangaLibraryEntryExists}}
-            <li>
-              <button type="button" {{bind-attr class=":btn :btn-default :top-button :heart mangaLibraryEntry.isFavorite:active"}} {{action "toggleFavorite"}}>
-                <i {{bind-attr class=":fa mangaLibraryEntry.isFavorite:fa-heart:fa-heart-o"}}></i>
-              </button>
-            </li>
-          {{/if}}
-        </ul>
-        <ul class="right-buttons">
-          <li>
-            {{#if currentUser.isSignedIn}}
-              <button {{bind-attr class=":btn :btn-default :top-button isDirty:active"}} {{action "openModal" 'edit-manga' this}}><i class='fa fa-pencil'></i></button>
-            {{/if}}
-          </li>
-        </ul>
-      </div>
-      <div class="gallery hidden-xs">
-        <ul class="gallery-images">
-          {{#each imageURL in screencaps}}
-            <li class="gallery-image"><img {{bind-attr src=imageURL}}></li>
-          {{/each}}
-        </ul>
-      </div>
-      <div class="series-body">
-        <div class="panel panel-default series-panel">
-          <div class="series-sidebar">
-            <!-- Mobile title -->
-            <div class="series-title-wrapper visible-xs">
-              <h4 class="series-title">
-                {{romajiTitle}}
-                {{#if englishTitle}}
-                  <small>({{englishTitle}})</small>
-                {{/if}}
-              </h4>
-            </div>
-
-            <div class="poster-container">
-              {{#link-to 'manga.index'}}
-                <img class="series-poster" {{bind-attr src=posterImage}}>
-              {{/link-to}}
-            </div>
-
-            <div class="sidebar-copy visible-xs">
-              <div class="series-infobar">{{partial "manga/infobar"}}</div>
-            </div>
-
-            <div class="series-description visible-xs">
-              <p>{{truncate-text text=synopsis length=300}}</p>
-            </div>
-
-            {{#if currentUser.isSignedIn}}
-              {{#if mangaLibraryEntryExists}}
-                <div class="personal-rating active">
-                  <h5 class="sidebar-title text-center">Your Rating</h5>
-                  {{awesome-rating type=currentUser.ratingType editable="true" action="setLibraryRating" rating=mangaLibraryEntry.rating}}
-                </div>
-              {{/if}}
-            {{/if}}
-
-            <div id="affiliate" class="buy-series">
-              <h5 class="sidebar-title">Where to Buy</h5>
-              <div class="affiliate-button">
-                <a {{bind-attr href=amazonLink}} target="_blank"><img src="/images/amazon-purchase.png"></a>
-              </div>
-              <hr>
-            </div>
-          </div>
-
-          <div class="series-content">
-            {{outlet}}
-          </div>
-        </div>
-      </div>
+<div {{bind-attr class=":series-header noCoverImage"}} {{bind-attr style=coverImageStyle}}>
+  <div class="container">
+    <div class="header-buttons">
+      {{#if currentUser.isSignedIn}}
+        <span class="edit-button">
+          <a {{action "openModal" "edit-manga" this}}>Edit this page</a>
+        </span>
+      {{/if}}
+      <span class="facebook-share">
+        <div class="fb-like" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
+      </span>
+      <span class="twitter-share">
+        <a class="twitter-share-button" href="https://twitter.com/share"> Tweet </a>
+        <script type="text/javascript">
+        window.twttr=(function(d,s,id){var t,js,fjs=d.getElementsByTagName(s)[0];if(d.getElementById(id)){return}js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);return window.twttr||(t={_e:[],ready:function(f){t._e.push(f)}})}(document,"script","twitter-wjs"));
+        </script>
+      </span>
     </div>
+    {{#if randomQuote}}
+      <div class="featured-quote">
+        <div class="quote-text">"{{randomQuote.content}}"</div>
+        <div class="quote-author">- {{randomQuote.characterName}}</div>
+      </div>
+    {{/if}}
   </div>
 </div>
+
+{{outlet}}
+
