Fixed css issue with when no notifications
Fixed css issue with when no notifications

--- a/app/assets/stylesheets/base/layout.css.scss
+++ b/app/assets/stylesheets/base/layout.css.scss
@@ -169,6 +169,13 @@ img, iframe {
     position: absolute !important;
     right: -50px;
 
+    .no-notifications{
+      text-align: center;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      border-bottom: 1px solid #eee;
+    }
+
     li {
       background: #fff;
       width: 100% !important;
