--- a/frontend/app/templates/header/notifications.hbs
+++ b/frontend/app/templates/header/notifications.hbs
@@ -14,7 +14,7 @@
         <span>You don't have any notifications yet.</span>
       </li>
     {{/each}}
-    <li class="notification view-all">
+    <li class="view-all">
       {{#link-to 'notifications'}}View All Notifications{{/link-to}}
     </li>
   </ul>
