--- a/frontend/app/templates/manga/_characters.hbs
+++ b/frontend/app/templates/manga/_characters.hbs
@@ -1,10 +1,12 @@
 <ul class="cast">
-  {{#each model.featuredCastings as |casting|}}
-    <li class="casting">
-      <a class="character">
-        <img {{bind-attr src=casting.character.image}} width="30" height="47">
-        {{casting.character.name}}
-      </a>
+  {{#each displayCast as |character|}}
+    <li class="character-wrapper">
+      <div class="cast-image">
+        <img class="character" src="{{character.image}}">
+      </div>
+      <div class="cast-name">
+        <h4>{{character.name}}</h4>
+      </div>
     </li>
   {{/each}}
 </ul>
